--- a/app/module/resource/element/view/upsert.html
+++ b/app/module/resource/element/view/upsert.html
@@ -68,7 +68,7 @@
 
                 serviceManager.get('StoragePluginManager')
                     .get(ResourceConfig.NAME_SERVICE)
-                    .eventManager.on(Storage.STORAGE_POST_SAVE, this._clearData.bind(this)
+                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_SAVE, this._clearData.bind(this)
                 );
 
                 this.$.formResource.addEventListener('iron-form-presubmit', this.submitResource.bind(this));
