--- a/app/module/timeslot/element/view/list.html
+++ b/app/module/timeslot/element/view/list.html
@@ -89,12 +89,12 @@
 
                 serviceManager.get('StoragePluginManager')
                     .get(TimeslotConfig.NAME_SERVICE)
-                    .eventManager.on(Storage.STORAGE_POST_SAVE, this._loadResource.bind(this)
+                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_SAVE, this._loadResource.bind(this)
                 );
 
                 serviceManager.get('StoragePluginManager')
                     .get(TimeslotConfig.NAME_SERVICE)
-                    .eventManager.on(Storage.STORAGE_POST_UPDATE, this._loadResource.bind(this)
+                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_UPDATE, this._loadResource.bind(this)
                 );
 
                 this._loadResource();
