--- a/app/module/playlist/element/view/list.html
+++ b/app/module/playlist/element/view/list.html
@@ -85,12 +85,12 @@
                 super.ready();
                 serviceManager.get('StoragePluginManager')
                     .get(PlaylistConfig.NAME_SERVICE)
-                    .eventManager.on(Storage.STORAGE_POST_SAVE, this._loadResource.bind(this)
+                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_SAVE, this._loadResource.bind(this)
                 );
 
                 serviceManager.get('StoragePluginManager')
                     .get(PlaylistConfig.NAME_SERVICE)
-                    .eventManager.on(Storage.STORAGE_POST_UPDATE, this._loadResource.bind(this)
+                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_UPDATE, this._loadResource.bind(this)
                 );
             }
 
