--- a/app/module/playlist/element/view/upsert.html
+++ b/app/module/playlist/element/view/upsert.html
@@ -143,7 +143,7 @@
 
                 serviceManager.get('StoragePluginManager')
                     .get(PlaylistConfig.NAME_SERVICE)
-                    .eventManager.on(Storage.STORAGE_POST_SAVE, this._clearData.bind(this)
+                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_SAVE, this._clearData.bind(this)
                 );
             }
 
