Refactor media device module for new library

--- a/app/module/media-device/element/view/list.html
+++ b/app/module/media-device/element/view/list.html
@@ -84,12 +84,12 @@
                 super.ready();
                 serviceManager.get('StoragePluginManager')
                     .get(MediaDeviceConfig.NAME_SERVICE)
-                    .eventManager.on(Storage.STORAGE_POST_SAVE, this._getResources.bind(this)
+                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_SAVE, this._getResources.bind(this)
                 );
 
                 serviceManager.get('StoragePluginManager')
                     .get(MediaDeviceConfig.NAME_SERVICE)
-                    .eventManager.on(Storage.STORAGE_POST_UPDATE, this._getResources.bind(this)
+                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_UPDATE, this._getResources.bind(this)
                 );
             }
 
