--- a/app/module/media-device/element/view/upsert.html
+++ b/app/module/media-device/element/view/upsert.html
@@ -114,7 +114,7 @@
                 return {
 
                     /**
-                     * @param {MatchSoccer}
+                     * @param {MediaDevice}
                      */
                     resource: {
                         type: Object,
