--- a/app/module/video-panel/element/view/resource-list.html
+++ b/app/module/video-panel/element/view/resource-list.html
@@ -84,12 +84,12 @@
                 super.ready();
                 serviceManager.get('StoragePluginManager')
                     .get(VideoPanelConfig.RESOURCE_SERVICE)
-                    .eventManager.on(Storage.STORAGE_POST_SAVE, this._getSidelineResources.bind(this)
+                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_SAVE, this._getSidelineResources.bind(this)
                 );
 
                 serviceManager.get('StoragePluginManager')
                     .get(VideoPanelConfig.RESOURCE_SERVICE)
-                    .eventManager.on(Storage.STORAGE_POST_UPDATE, this._getSidelineResources.bind(this)
+                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_UPDATE, this._getSidelineResources.bind(this)
                 );
             }
 
