--- a/app/module/video-panel/element/view/upsert.html
+++ b/app/module/video-panel/element/view/upsert.html
@@ -47,6 +47,7 @@
             }
 
             #cardSubSideline {
+                height: fit-content;
                 width: 100%;
             }
 
