--- a/app/module/timeslot/element/view/upsert.html
+++ b/app/module/timeslot/element/view/upsert.html
@@ -6,7 +6,6 @@
 <link rel="import" href="../../../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../../../../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../../../../bower_components/paper-listbox/paper-listbox.html">
-<link rel="import" href="../../../../bower_components/neon-animation/web-animations.html">
 <link rel="import" href="../../../../bower_components/iron-form/iron-form.html">
 <link rel="import" href="../../../../bower_components/paper-autocomplete/paper-autocomplete.html">
 <link rel="import" href="../../../../bower_components/paper-chip/paper-chip.html">
@@ -265,7 +264,7 @@
             submitTimeslot(evt) {
                 evt.preventDefault();
 
-                let method = 'save';
+                let method = !this.timeslot.id ? 'save' : 'update';
                 this.timeslot.dataReferences = [];
 
                 if (this.$.dataReferences.data && this.$.dataReferences.service) {
