--- a/app/module/video-panel/element/view/upsert.html
+++ b/app/module/video-panel/element/view/upsert.html
@@ -65,6 +65,7 @@
                                     <paper-input id="name" name="name" label="Name" value="{{resource.videoPanel.name}}" required></paper-input>
                                     <paper-input id="width" name="width" label="Width" type="number" value="{{resource.videoPanel.width}}" required></paper-input>
                                     <paper-input id="height" name="height" label="Height" type="number" value="{{resource.videoPanel.height}}" required></paper-input>
+                                    <div>{{resource.videoPanel.virtualMonitorReference.name}}</div>
                                 </div>
                                 <div class="flex flex-center">
                                     <paper-menu-button ignore-select style="padding: 0">
@@ -81,6 +82,7 @@
                                         <paper-input id="name" name="name" label="Name" value="{{videoPanel.name}}" required></paper-input>
                                         <paper-input id="width" name="width" label="Width" type="number" value="{{videoPanel.width}}" required></paper-input>
                                         <paper-input id="height" name="height" label="Height" type="number" value="{{videoPanel.height}}" required></paper-input>
+                                        <div>{{videoPanel.virtualMonitorReference.name}}</div>
                                     </div>
                                     <div class="flex flex-center">
                                         <paper-menu-button ignore-select style="padding: 0">
